added the scripts index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,20 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script src="/public/js/db.js"></script>
+  <script src="/public/service-worker.js"></script>
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker
+      .register('service-worker.js')
+      .then((registration) => {
+        console.log('Service Worker Registered!');
+      })
+      .catch((error) => {
+        console.log('Service Worker Registration Failed');
+        console.log(error);
+      });
+    }
+  </script>
 </body>
 </html>
